--- a/src/niver65/templates/base.html
+++ b/src/niver65/templates/base.html
@@ -1,20 +1,53 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Sidon Niver65 2024 Party{% endblock %}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %}Your Site Title{% endblock %}</title>
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://unpkg.com/htmx.org"></script>
+    <!-- HTMX -->
+    <script src="https://unpkg.com/htmx.org@1.6.1/dist/htmx.min.js"></script>
+    <style>
+        body, html {
+            height: 100%;  /* Essencial para centralização vertical completa */
+            margin: 0;     /* Remove margens padrão */
+            padding: 0;    /* Remove padding padrão */
+            overflow: hidden; /* Impede rolagem no nível do body/html */
+            background: linear-gradient(120deg, #89f7fe 0%, #66a6ff 100%); /* Gradiente de fundo */
+        }
+        header {
+            position: fixed;
+            width: 100%; /* Garante que o cabeçalho cubra toda a largura */
+            top: 0; /* Fixa o cabeçalho no topo da página */
+            z-index: 1000; /* Garante que o cabeçalho fique sobre outros conteúdos */
+            background: #ffffff; /* Fundo branco para o cabeçalho com sombra para destaque */
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            padding: 10px 0; /* Padding vertical */
+        }
+        #main-content {
+            position: absolute;
+            top: 56px; /* Ajuste conforme a altura do seu cabeçalho */
+            bottom: 0;
+            left: 0;
+            right: 0;
+            overflow-y: auto; /* Permite rolagem vertical se necessário */
+        }
+    </style>
 </head>
 <body>
-<div class="container mt-4">
-    {% block header %}
-    <header class="mb-4">
-        <h1 class="text-center">Sidon Niver65 2024 Party</h1>
+    <header class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Sidon Niver65 2024 Party</a>
+        <!-- Outros elementos do cabeçalho -->
     </header>
-    {% endblock %}
 
-    {% block content %}{% endblock %}
-</div>
+    <div id="main-content" class="d-flex align-items-center justify-content-center w-100">
+        {% block content %}
+        <!-- Conteúdo substituível -->
+        {% endblock %}
+    </div>
+
+    <!-- Bootstrap JS with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
 </body>
 </html>
