--- a/src/niver65/templates/partials/all_music_list.html
+++ b/src/niver65/templates/partials/all_music_list.html
@@ -2,7 +2,7 @@
 <ul class="list-group">
     {% for music in music_list %}
     <li class="list-group-item">
-        {{ music.song_name }} - <a href="{{ music.info_song}}" target="_blank">{{music.info_song}}</a>
+        {{ music.song_name }} - <a href="{{ music.info_song }}" target="_blank"><i class="fas fa-external-link-alt"></i></a>
     </li>
     {% endfor %}
 </ul>
