--- a/src/niver65/templates/login.html
+++ b/src/niver65/templates/login.html
@@ -7,6 +7,9 @@
     <div class="card-header text-white" style="background: #007bff;">Login</div>
     <div class="card-body">
         <form method="post" action="{{ url_for('process_login') }}">
+            <!-- Campo oculto para token_id -->
+            <input type="hidden" name="token_id" value="{{ token_id }}">
+
             <div class="mb-3">
                 <label for="name" class="form-label">Name</label>
                 <input type="text" class="form-control" id="name" name="name" required>
