--- a/src/niver65/templates/suggest_music.html
+++ b/src/niver65/templates/suggest_music.html
@@ -5,7 +5,6 @@
 {% block content %}
 <div class="container-fluid">
 
-
     <!-- Cabeçalho com informações do usuário -->
     <div class="row">
         <div class="col-md-6">
@@ -24,6 +23,7 @@
             <div class="p-3">
                 <form hx-post="/add-music" hx-target="#user-music-list" hx-swap="beforeend">
                     <input type="hidden" name="email_id" value="{{ email }}">
+                    <input type="hidden" name="token_id" value="{{ token_id }}">
                     <input type="hidden" id="entry_count" name="entry_count" value="0">  <!-- Campo oculto para o contador -->
                     <div class="mb-3">
                         <label for="music_name" class="form-label">Nome da música</label>
