--- a/src/niver65/templates/show_all_music.html
+++ b/src/niver65/templates/show_all_music.html
@@ -3,7 +3,7 @@
 {% block title %}Músicas Cadastradas{% endblock %}
 
 {% block content %}
-<div class="container-fluid vh-100">
+<div class="container-fluid vh-100 d-flex flex-column">
     <div class="row">
         <div class="col-12">
             <div class="p-3">
@@ -12,8 +12,8 @@
         </div>
     </div>
     <div class="row flex-grow-1">
-        <div class="col-12">
-            <div id="all-music-list" class="table-responsive mt-0" style="height: calc(100% - 56px); overflow-y: auto;">
+        <div class="col-12 d-flex flex-column">
+            <div id="all-music-list" class="table-responsive flex-grow-1 overflow-auto">
                 <table class="table table-striped table-bordered table-hover table-dark">
                     <thead>
                         <tr>
