--- a/src/niver65/templates/show_all_music.html
+++ b/src/niver65/templates/show_all_music.html
@@ -1,10 +1,10 @@
-{% extends 'base2.html' %}
+{% extends 'base3.html' %}
 
 {% block title %}Músicas Cadastradas{% endblock %}
 
 {% block content %}
-<div class="container-fluid vh-100 d-flex flex-column">
-    <div class="row flex-shrink-0">
+<div class="container-fluid d-flex flex-column h-100">
+    <div class="row">
         <div class="col-12">
             <div class="p-3">
                 <h1 class="text-white">Músicas Cadastradas</h1>
@@ -13,9 +13,9 @@
     </div>
     <div class="row flex-grow-1 overflow-hidden">
         <div class="col-12 d-flex flex-column">
-            <div id="all-music-list" class="table-responsive flex-grow-1 overflow-auto">
-                <table class="table table-striped table-bordered table-hover table-dark">
-                    <thead>
+            <div id="all-music-list" class="mt-0 flex-grow-1" style="max-height: calc(100vh - 100px); overflow-y: auto;">
+                <table class="table table-striped table-bordered table-hover table-dark mb-0">
+                    <thead class="thead-dark">
                         <tr>
                             <th>Nome da Música</th>
                             <th>Link</th>
