--- a/src/niver65/templates/show_all_music.html
+++ b/src/niver65/templates/show_all_music.html
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-12">
             <div class="p-3">
-                <h1 class="text-white">Músicas Cadastradas</h1>
+                <h1 class="text-black">Músicas Cadastradas</h1>
             </div>
         </div>
     </div>
